tests/expectations/compiler/structs/inline_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372013]: Struct initialization expression for `Foo` is missing member `x`.
    --> compiler-test:10:22
     |
  10 |         let a: Foo = Foo { y: 0u32 };
     |                      ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
